--- a/frontend/src/templates/partials/_footer.html
+++ b/frontend/src/templates/partials/_footer.html
@@ -35,7 +35,7 @@
 			</div>
 
 			<div class="footer__btn">
-				<a href="#" class="btn btn--outline btn--block">
+				<a href="mailto:events@gitnation.org" class="btn btn--outline btn--block">
 					events@gitnation.org
 				</a>
 			</div>
