--- a/frontend/src/sass/partials/_common.sass
+++ b/frontend/src/sass/partials/_common.sass
@@ -4,28 +4,41 @@
 	& > *:last-child
 		margin-bottom: 0
 	p
-		margin-bottom: 10px
+		margin-bottom: 15px
 	a
 		color: var(--clr-theme)
 		&:hover
 			text-decoration: underline
+	h3
+		font-size: 22px
+		margin-top: 24px
+		margin-bottom: 10px
+		font-weight: 400
+		+sm
+			font-size: 18px
+		+xs
+			font-size: 16px
+	h4
+		font-size: 18px
+		margin-top: 24px
+		margin-bottom: 10px
+		font-weight: 400
+		+sm
+			font-size: 16px
+		+xs
+			font-size: 14px
 	ul
 		list-style-type: none
 		list-style-image: url(../img/list-star.svg)
 		padding: 0
-		margin-bottom: 10px
+		margin-bottom: 15px
 		margin-left: 15px
 		li
 			padding-left: 8px
-			+sm
-				line-height: 1.3
-
 			strong
 				font-weight: 500
 		li:not(:last-child)
-			margin-bottom: 18px
-			+sm
-				margin-bottom: 15px
+			margin-bottom: 10px
 
 	&--gray
 		color: var(--clr-gray-100)
