--- a/frontend/src/sass/partials/_features.sass
+++ b/frontend/src/sass/partials/_features.sass
@@ -31,6 +31,7 @@
 	padding: 20px 30px
 	border-radius: 30px
 	overflow: hidden
+	z-index: 1
 	+md
 		border-radius: 0
 		width: 627px
@@ -42,6 +43,17 @@
 		height: 448px
 		padding-bottom: 20px
 		padding-top: 20px
+	&:before
+		content: ''
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		border-radius: inherit
+		z-index: -1
+		background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 50%, rgba(0, 0, 0, 0.00) 50%, rgba(0, 0, 0, 0.80) 100%)
+
 	&__text
 		margin-top: auto
 		font-size: 22px
