--- a/frontend/src/sass/style.sass
+++ b/frontend/src/sass/style.sass
@@ -2,10 +2,9 @@
 @import "helpers/mixins"
 @import "helpers/normalize"
 
-html,
-body
-	width: 100%
-	height: 100%
+html
+	&.lock, &.lock body
+		overflow: hidden
 
 body
 	width: 100%
@@ -14,6 +13,9 @@ body
 	font-family: var(--ff)
 	font-size: 16px
 	line-height: 1.4
+	min-height: 100%
+	position: relative
+
 	--clr-section-gap: 150px
 	+md
 		--clr-section-gap: 96px
@@ -39,15 +41,8 @@ body
 
 @import helpers/fonts
 @import helpers/icons
-// @import "helpers/bootstrap-grid";
-
-// @import "vendor/slick";
 // @import "vendor/aos";
 
-// @import "vendor/jquery.fancybox";
-// @import "vendor/owl.carousel";
-
-// @import partials/header
 @import partials/forms
 @import partials/buttons
 @import partials/common
@@ -63,14 +58,6 @@ body
 @import partials/features
 @import partials/partners
 @import partials/about
-// @import "partials/motivation"
-// @import "partials/features"
-// @import "partials/stats"
-// @import "partials/tile-stats"
-// @import "partials/packages"
+@import partials/popups
 
-// @import "partials/sponsors"
-// @import "partials/socials"
-
-// @import "partials/content";
 @import "partials/footer"
