--- a/frontend/src/templates/index.html
+++ b/frontend/src/templates/index.html
@@ -1,11 +1,7 @@
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
-
-
-
 <main class="content">
-
 	{% include "partials/_hero.html" %}
 	{% include "partials/_conference-sponsor.html" %}
 	{% include "partials/_numbers.html" %}
@@ -17,29 +13,12 @@
 	{% include "partials/_reviews.html" %}
 	{% include "partials/_features.html" %}
 	{% include "partials/_partners.html" %}
+	{% if not info.isAboutShow %}
 	{% include "partials/_about.html" %}
-
-
-	{#{% if keyFeatures %}
-	{% include "partials/_motivation-key-stats.html" %}
-	{% include "partials/_stats.html" %}
-	{% include "partials/_motivation.html" %}
-	{% else %}
-	{% include "partials/_motivation.html" %}
-	{% include "partials/_stats.html" %}
 	{% endif %}
-
-
-	{% if not hideTilesBlock %}
-	{% include "partials/_tile-stats.html" %}
-	{% endif %}
-
-	{% include "partials/_packages.html" %}
-	#}
-
-</main><!-- .content -->
-
+</main>
 
 {% include "partials/_footer.html" %}
+{% include "partials/popups/_popup-package.html" %}
 
 {% endblock %}
