--- a/frontend/src/templates/partials/_demographics.html
+++ b/frontend/src/templates/partials/_demographics.html
@@ -1,62 +1,53 @@
 <section class="section sec-demographics" id="demographics">
 	<div class="container">
 		<div class="section__head">
-			<h2 class="section__title">Audience demographics</h2>
+			<h2 class="section__title">{{info.statsSubTitle}}</h2>
 			<div class="section__description">
-				Our events attract a wide range of people who share a passion for building better software
+				{{info.statsDescription}}
 			</div>
 		</div>
 
 		<div class="demographics__tabs tab-block" data-tabs>
 			<nav class="tab-block__nav" data-tabs-nav>
-				<button class="tab-block__navitem _active" data-tabs-button="0">IN-PERSON GEO</button>
-				<button class="tab-block__navitem" data-tabs-button="1">ATTENDEE GLOBAL GEO</button>
-				<button class="tab-block__navitem " data-tabs-button="2">JOB TITLES</button>
+				{% for tabNav in stats %}
+				<button class="tab-block__navitem {{'_active' if tabNav.checked }}" data-tabs-button="{{loop.index - 1}}">{{tabNav.tabTitle}}</button>
+				{% endfor %}
 			</nav>
 			<div class="tab-block__items" data-tabs-items>
-				<div class="tab-block__item _active" data-tabs-block>
+				{% for tabBlock in stats %}
+				<div class="tab-block__item {{'_active' if tabBlock.checked }}" data-tabs-block>
+					{% if tabBlock.type === 'columnCharts' %}
 					<div class="graphics">
-						{% for item in range(0,7) %}
-						<div class="graphics__item">
+						{% for chart in tabBlock.data %}
+						<div class="graphics__item" style="--progress: {{chart.percent}}%;">
 							<div class="graphics__inner">
-								<div class="graphics__percent">25%</div>
-								<div class="graphics__progress" style="--progress: 25%;"></div>
+								<div class="graphics__percent">{{chart.percent}}%</div>
+								<div class="graphics__progress"></div>
 							</div>
-							<div class="graphics__title">Other International</div>
+							<div class="graphics__title">{{chart.title}}</div>
 						</div>
 						{% endfor %}
 					</div>
-				</div>
-				<div class="tab-block__item" data-tabs-block>
-					<div class="graphics">
-						{% for item in range(0,7) %}
-						<div class="graphics__item">
-							<div class="graphics__inner">
-								<div class="graphics__percent">15%</div>
-								<div class="graphics__progress" style="--progress: 15%;"></div>
-							</div>
-							<div class="graphics__title">Germany</div>
-						</div>
-						{% endfor %}
-					</div>
-				</div>
-				<div class="tab-block__item " data-tabs-block>
+					{% endif %}
+					{% if tabBlock.type === 'circleCharts' %}
 					<div class="graphics-circle">
-						{% for item in range(0,4) %}
+						{% for chart in tabBlock.data %}
 						<div class="graphics-circle__item">
 							<div class="graphics-circle__inner">
 								<svg viewBox="0 0 36 36" class="graphics-circle__svg" stroke=var(--clr-theme)>
 									<path class="graphics-circle__svg-bg" d="M18 1.3 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
-									<path class="graphics-circle__svg-progress" stroke-dasharray="15, 100" d="M18 1.3 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
-									<text x="18" y="20.35" class="graphics-circle__percentage">15%</text>
+									<path class="graphics-circle__svg-progress" stroke-dasharray="{{chart.percent}}, 100" d="M18 1.3 a 15.9155 15.9155 0 0 1 0 31.831 a 15.9155 15.9155 0 0 1 0 -31.831" />
+									<text x="18" y="20.35" class="graphics-circle__percentage">{{chart.percent}}%</text>
 								</svg>
 							</div>
-							<p class="graphics-circle__title">Engineer</p>
+							<p class="graphics-circle__title">{{chart.title}}</p>
 
 						</div>
 						{% endfor %}
 					</div>
+					{% endif %}
 				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
