--- a/frontend/src/templates/partials/_reviews.html
+++ b/frontend/src/templates/partials/_reviews.html
@@ -1,31 +1,31 @@
 <section class="section sec-reviews" id="reviews">
 	<div class="container">
 		<div class="section__head">
-			<h3 class="section__suptitle">See what our partners say</h3>
+			<h3 class="section__suptitle">{{info.partnersTitle}}</h3>
 		</div>
 
 		<div class="reviews">
 			<div class="swiper reviews-swiper">
 				<div class="swiper-wrapper">
+					{% for recommended in partners %}
 					<div class="swiper-slide review">
 
 						<div class="review__text">
-							«The event was really good organized and the talks were really amazing. We enjoyed the good conversations with the other speakers, the audience and other exhibitors. All in all a great event.»
+							{{recommended.text}}
 						</div>
 						<div class="review__footer">
 							<div class="review__author r-author">
 								<div class="r-author__img">
-									<img src="img/r-author-img.png" alt="">
+									<img src="{{recommended.image.asset.url}}" alt="{{recommended.name}}">
 								</div>
 								<div class="r-author__content">
-									<div class="r-author__name">Lukas Fischer</div>
-									<div class="r-author__company">Microsoft, USA</div>
+									<div class="r-author__name">{{recommended.name}}</div>
+									<div class="r-author__company">{{recommended.job}}</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="swiper-slide">Slide 2</div>
-					<div class="swiper-slide">Slide 3</div>
+					{% endfor %}
 				</div>
 			</div>
 
