--- a/frontend/src/templates/layouts/_layout.html
+++ b/frontend/src/templates/layouts/_layout.html
@@ -82,7 +82,7 @@
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 <!-- <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script> -->
-<script src="js/swiper-11.1.3.js"></script>
+<script src="lib/swiper-11.1.3.js"></script>
 <script src="js/app.js?v5"></script>
 
 </body>
